Updated dev module to latest version. #deploy

--- a/deploy-compose.yml
+++ b/deploy-compose.yml
@@ -5,6 +5,7 @@ services:
     image: "travus/bernie_bot:latest"
     volumes:
       - modules:/usr/src/app/modules
+      - ./config.yml:/usr/src/app/config.yml
 
   postgres:
     image: postgres
