--- a/dev-compose.yml
+++ b/dev-compose.yml
@@ -7,6 +7,7 @@ services:
       - postgres
     volumes:
       - ./modules:/usr/src/app/modules
+      - ./config.yml:/usr/src/app/config.yml
 
   postgres:
     image: postgres
