--- a/deploy-compose.yml
+++ b/deploy-compose.yml
@@ -8,7 +8,7 @@ services:
       - ./config.yml:/usr/src/app/config.yml
 
   postgres:
-    image: postgres
+    image: postgres:12
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRESS_USER: postgres
