--- a/dev-compose.yml
+++ b/dev-compose.yml
@@ -10,7 +10,7 @@ services:
       - ./config.yml:/usr/src/app/config.yml
 
   postgres:
-    image: postgres
+    image: postgres:12
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRESS_USER: postgres
