--- a/deploy-compose.yml
+++ b/deploy-compose.yml
@@ -11,7 +11,7 @@ services:
     image: postgres:12
     environment:
       POSTGRES_PASSWORD: postgres
-      POSTGRESS_USER: postgres
+      POSTGRES_USER: postgres
       POSTGRES_DB: discord_bot
     volumes:
       - database:/var/lib/postgresql/data
