--- a/dev-compose.yml
+++ b/dev-compose.yml
@@ -13,12 +13,12 @@ services:
     image: postgres:12
     environment:
       POSTGRES_PASSWORD: postgres
-      POSTGRESS_USER: postgres
+      POSTGRES_USER: postgres
       POSTGRES_DB: discord_bot
     volumes:
       - database:/var/lib/postgresql/data
     ports:
-    - 5432:5432
+    - "5432:5432"
 
 volumes:
   database:
